# metastr-cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmarks/: baseline.cpp  bench_common.hpp  metastr_auto.cpp  metastr_stream.cpp
cmake/: generate_build_key.ps1  metastr-cpp-config.cmake.in
examples/: app_strings.cpp  basic.cpp  manual_blob.cpp  scoped_decode.cpp
include/metastr/: metastr.hpp
tests/: test_cases.cpp
tests/consumer/: CMakeLists.txt  consumer.cpp
tools/: check_binary_strings.ps1  check_per_build_key.ps1  run_size_bench.ps1
